
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2008-01-16 DP  1.8.2  Refresh Views correctly on EnterpriseDB.
2008-01-14 DP  1.8.2  Fix the privilege editor on the Language dialogue, per
                      Bborie Park.
2008-01-10 DP  1.8.2  Correctly identify the schema of trigger functions that
                      are in system catalogs as can be the case with integrated
                      full text search.
2008-01-09 HS  1.8.2  Warn the user if a file cannot be saved in the default
                      encoding.
2008-01-07 DP  1.8.2  Undecorated out-param types must be included in EDB-SPL
                      function signatures when altering comments or privileges
                      or dropping functions or procedures.
2008-01-07 DP  1.8.2  Ensure enums are offered as datatypes for columns.
2008-01-07 DP  1.8.2  Fix column dialogue to allow proper modification of array
                      columns per Erwin.
2008-01-07 DP  1.8.2  Newer build of EnterpriseDB consistently strip trailing
                      semi-colons from package headers and bodies. Update 
                      reverse engineering allow for this.
2008-01-07 DP  1.8.2  Ensure the properties dialogues will work sanely with
                      objects named " " (!).
2008-01-07 DP  1.8.2  EDB-SPL functions require NULL to be passed in out-params
                      when debugging.
2008-01-07 DP  1.8.2  Ensure that EDB-SPL trigger DDL code is appropriately
                      formatted on newer builds of EnterpriseDB.
2008-01-03 DP  1.8.2  Ensure the password and confirmed password always match
                      when adding or editing roles or users.