@@ -36,6 +36,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-18 DP  1.8.2  Fix the WITH ADMIN membership option when creating roles.  
 2008-01-16 DP  1.8.2  Refresh Views correctly on EnterpriseDB.
 2008-01-14 DP  1.8.2  Fix the privilege editor on the Language dialogue, per
                       Bborie Park.
